# jaggie-jarvis

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
Jarvis/.obsidian/: workspace.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChatPanel.tsx  JarvisCore.tsx  KnowledgeGraph.tsx  SettingsPanel.tsx  SystemStatus.tsx  VoiceVisualizer.tsx
src/hooks/: useAI.ts  useObsidian.ts  useVoice.ts
src/lib/: memory.ts  providers.ts
src/types/: speech.d.ts  tauri.d.ts
