[package]
name = "jaggie-jarvis"
version = "0.1.0"
description = "Jaggie Jarvis - Your Personal AI Assistant"
authors = ["Jaggie"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-os = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
